# SKK_JISYO.wiktionary

./: .gitignore  Cargo.toml  LICENSE  README.md  SKK_JISYO.seikana  SKK_JISYO.shikakugoma  header.txt  make.sh
src/: lib.rs  model.rs
